--- a/resursos.css
+++ b/resursos.css
@@ -8,6 +8,11 @@ nav {
     gap: 25px;
 }
 
+nav a {
+    border-radius: 10px;
+    padding: 25px;
+}
+
 
 /* CONFIGURAÇÃO DO SEGUNDO BLOCO */
 #segundobloco {
@@ -60,10 +65,9 @@ nav {
     grid-template-columns: auto;
     gap: 25px;
 
-    border: 1px solid #fcde67;
-    box-shadow: 5px 5px #fcde67;
+    padding: 0 15px 15px 15px;
     border-radius: 10px;
-    padding: 5px;
+    border: 1px solid #fcde67;
 }
 
 .terceirobloco-bloco2 {
