--- a/trabalhos.css
+++ b/trabalhos.css
@@ -8,6 +8,11 @@ nav {
     gap: 25px;
 }
 
+nav a {
+    border-radius: 10px;
+    padding: 25px;
+}
+
 
 
 /* CONFIGURAÇÃO DO SEGUNDO BLOCO */
@@ -30,10 +35,9 @@ nav {
     grid-template-columns: auto;
     gap: 25px;
 
-    border: 1px solid #fcde67;
-    box-shadow: 5px 5px #fcde67;
+    padding: 0 15px 15px 15px;
     border-radius: 10px;
-    padding: 5px;
+    border: 1px solid #fcde67;
 }
 
 /* configuração da imagem e descricao */
@@ -67,10 +71,9 @@ nav {
     grid-template-columns: auto;
     gap: 25px;
 
-    border: 1px solid #fcde67;
-    box-shadow: 5px 5px #fcde67;
+    padding: 0 15px 15px 15px;
     border-radius: 10px;
-    padding: 5px;
+    border: 1px solid #fcde67;
 }
 
 /* configuração da imagem e descricao */
