--- a/padrao.css
+++ b/padrao.css
@@ -1,12 +1,26 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+* 
+* Realizado dia 16 de dezembro de 2022
+*
+*/
+
 * {
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 body {
     max-width: 1200px;
     margin: 0 auto;
 
+    display: -ms-grid;
+
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 }
