--- a/resursos.css
+++ b/resursos.css
@@ -1,10 +1,29 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*
+* Realizado dia 16 de dezembro de 2022
+*/
+
 /* CONFIGURAÇÃO DO PRIMEIRO BLOCO */
 nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 25px;
 }
 
@@ -16,22 +35,30 @@ nav a {
 
 /* CONFIGURAÇÃO DO SEGUNDO BLOCO */
 #segundobloco {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 }
 
 #segundobloco-bloco1 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 }
 
 .segundobloco-bloco2 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 125px 25px auto;
     grid-template-columns: 125px auto;
     gap: 25px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .segundobloco-bloco2 img {
@@ -39,11 +66,21 @@ nav a {
 }
 
 .segundobloco-bloco3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 .segundobloco-bloco3 h2, .segundobloco-bloco3 p {
@@ -55,13 +92,17 @@ nav a {
 
 /* CONFIGURAÇÃO DO TERCEIRO BLOCO */
 #terceirobloco {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 }
 
 .terceirobloco-bloco1 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 
@@ -71,7 +112,9 @@ nav a {
 }
 
 .terceirobloco-bloco2 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 }
@@ -81,11 +124,21 @@ nav a {
 }
 
 .terceirobloco-bloco3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 .terceirobloco-bloco3 h2, .terceirobloco-bloco3 h3, .terceirobloco-bloco3 p {
@@ -121,6 +174,7 @@ nav a {
 
     /* CONFIGURAÇÃO DO TERCEIRO BLOCO */
     .segundobloco-bloco2 {
+        -ms-grid-columns: 100px auto;
         grid-template-columns: 100px auto;
     }
 }
@@ -152,6 +206,7 @@ nav a {
 
     /* CONFIGURAÇÃO DO TERCEIRO BLOCO */
     .segundobloco-bloco2 {
+        -ms-grid-columns: 75px auto;
         grid-template-columns: 75px auto;
     }
 }
