--- a/trabalhos.css
+++ b/trabalhos.css
@@ -1,10 +1,30 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*
+* Realizado dia 16 de dezembro de 2022
+*
+*/
+
 /* CONFIGURAÇÃO DO PRIMEIRO BLOCO */
 nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     gap: 25px;
 }
 
@@ -17,21 +37,27 @@ nav a {
 
 /* CONFIGURAÇÃO DO SEGUNDO BLOCO */
 #segundobloco {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 }
 
 /* container do grupo */
 #segundobloco-bloco1 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto 25px auto 25px auto;
     grid-template-columns: auto auto auto;
     gap: 25px;
 }
 
 /* container individual */
 .segundobloco-bloco2 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 
@@ -49,7 +75,9 @@ nav a {
 
 /* CONFIGURAÇÃO DO TERCEIRO BLOCO */
 #terceirobloco {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 }
@@ -60,14 +88,18 @@ nav a {
 
 /* container do grupo */
 #terceirobloco-bloco1 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto 25px auto 25px auto;
     grid-template-columns: auto auto auto;
     gap: 25px;
 }
 
 /* container individual */
 .terceirobloco-bloco2 {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: auto;
     grid-template-columns: auto;
     gap: 25px;
 
@@ -114,10 +146,12 @@ nav a {
 
     /* CONFIGURAÇÃO DOS BLOCOS */
     #segundobloco-bloco1 {
+        -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
     }
 
     #terceirobloco-bloco1 {
+        -ms-grid-columns: auto auto;
         grid-template-columns: auto auto;
     }
 }
@@ -147,10 +181,12 @@ nav a {
 
     /* CONFIGURAÇÃO DOS BLOCOS */
     #segundobloco-bloco1 {
+        -ms-grid-columns: auto;
         grid-template-columns: auto;
     }
 
     #terceirobloco-bloco1 {
+        -ms-grid-columns: auto;
         grid-template-columns: auto;
     }
 }
