correção no bug do menu para as paginas recursos e contato, e a correção para os espaçamentos na pagina de index e trabalhos

--- a/index.css
+++ b/index.css
@@ -220,8 +220,8 @@ nav a {
 
     /* CONFIGURAÇÃO DO QUARTO BLOCO */
     #quartobloco-bloco1 {
-        -ms-grid-columns: auto auto;
-        grid-template-columns: auto auto;
+        -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     }
 
     .quartobloco-bloco2 {
@@ -282,6 +282,11 @@ nav a {
     }
 
     /* CONFIGURAÇÃO DO QUARTO BLOCO */
+    #quartobloco-bloco1 {
+        -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+
     .quartobloco-bloco2 {
         display: -ms-grid;
         display: grid;
