--- a/trabalhos.css
+++ b/trabalhos.css
@@ -90,8 +90,8 @@ nav a {
 #terceirobloco-bloco1 {
     display: -ms-grid;
     display: grid;
-    -ms-grid-columns: auto 25px auto 25px auto;
-    grid-template-columns: auto auto auto;
+    -ms-grid-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 25px;
 }
 
@@ -151,8 +151,8 @@ nav a {
     }
 
     #terceirobloco-bloco1 {
-        -ms-grid-columns: auto auto;
-        grid-template-columns: auto auto;
+        -ms-grid-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     }
 }
 
@@ -186,7 +186,7 @@ nav a {
     }
 
     #terceirobloco-bloco1 {
-        -ms-grid-columns: auto;
-        grid-template-columns: auto;
+        -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
     }
 }
