--- a/contato.css
+++ b/contato.css
@@ -48,16 +48,50 @@ main {
 }
 
 
-/* para telas menores que 1000px*/
-@media screen and (max-width: 1000px){
+/* CONFIGURAÇÃO DA MOBILIDADE DA PAGINA MEDIA */
+@media screen and (max-width: 1000px) {
+    /* configuração do tamanho dos titulos/textos */
+    .tamanho-titulo-1 {
+        font-size: 2em;
+    }
+
+    .tamanho-titulo-2 {
+        font-size: 1.5em;
+    }
+
+    .tamanho-texto-1 {
+        font-size: 1.2em;
+    }
+
+    .tamanho-texto-2 {
+        font-size: 1.875em;
+    }
+
     main {
         padding: 25px;
     }
 }
 
 
-/* para telas menores que 750px*/
-@media screen and (max-width: 750px){
+/* CONFIGURAÇÃO DA MOBILIDADE DA PAGINA PEQUENA */
+@media screen and (max-width: 600px) {
+    /* configuração do tamanho dos titulos/textos */
+    .tamanho-titulo-1 {
+        font-size: 1.4em;
+    }
+
+    .tamanho-titulo-2 {
+        font-size: 1.2em;
+    }
+
+    .tamanho-texto-1 {
+        font-size: 1em;
+    }
+
+    .tamanho-texto-2 {
+        font-size: 1.5em;
+    }
+
     main {
         padding: 10px;
     }
