--- a/resursos.css
+++ b/resursos.css
@@ -3,8 +3,6 @@
 * PostCSS: v8.4.14,
 * Autoprefixer: v10.4.7
 * Browsers: last 4 version
-*
-* Realizado dia 16 de dezembro de 2022
 */
 
 /* CONFIGURAÇÃO DO PRIMEIRO BLOCO */
@@ -31,7 +29,12 @@ nav a {
     border-radius: 10px;
     padding: 25px;
 
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+
+        -ms-flex-positive: 1;
+
+            flex-grow: 1;
+    text-align: center;
 }
 
 
